make my profile prettier

--- a/index.html
+++ b/index.html
@@ -7,20 +7,48 @@
     <title>My Profile | Yan Sun</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.ico">
   </head>
   <body>
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hello, I'm Yan! 🤝</h1>
         <img src="images/pfpyan.jpg" class="img-circle" width="100px" alt="Yan Sun">
-          <p>Hello!! Excited to join the community. I have prior experience in roles such as dispatch logistics for a food delivery
-          platform and residential real estate sales; as well as experience running a uni club, nightclub and small catering
-          business. Currently I'm learning code to leverage in my current business as well as expand my skill set to work on
-          tech-related ventures in the future.</p>
-          <a href="#" class="btn-purple">Discover Le Wagon</a>
+          <p>Hello!! I am a developer currently studying at Le Wagon 🚌</p>
+          <p>I am extremely passionate about innovative technologies and am hoping to build some awesome software in the near future! 💻</p>
+          <p>In my spare time I like to go out for a drink with friends 🍻 and also play basketball ⛹️‍♂️</p>
+          <a href="#" class="btn-blue">Discover Le Wagon</a>
+      </div>
+      <div class="card-white" id="interests">
+        <h2>My Interests 🧑‍💻</h2>
+        <ul>
+          <li>
+            <h3>Blockchain Technology</h3>
+          </li>
+          <li>
+            <h3>Software Development</h3>
+          </li>
+          <li>
+            <h3>Business</h3>
+          </li>
+        </ul>
+      </div>
+      <div class="card-white" id="hobbies">
+        <h2>My Hobbies 🏆</h2>
+        <ul>
+          <li>
+            <h3>Basketball</h3>
+          </li>
+          <li>
+            <h3>Running</h3>
+          </li>
+          <li>
+            <h3>Kicking back with mates</h3>
+          </li>
+        </ul>
       </div>
       <div class="card-white" id="socials">
-        <h2>Follow me</h2>
+        <h2>My socials:</h2>
         <ul class="list-inline">
           <li>
             <i class="fab fa-github-square"></i>
